--- a/support-tickets-app/package.json
+++ b/support-tickets-app/package.json
@@ -9,17 +9,17 @@
     "dev": "webpack serve --mode development --host 0.0.0.0"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.5.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
     "@babel/preset-react": "^7.22.0",
     "babel-loader": "^9.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^4.15.0"
+    "webpack": "^5.100.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   }
 }
