--- a/support-tickets-app/package.json
+++ b/support-tickets-app/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "axios": "^1.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+  "webpack": "^5.91.0",
+  "webpack-cli": "^5.1.4",
+  "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
