--- a/support-tickets-app/package.json
+++ b/support-tickets-app/package.json
@@ -4,10 +4,9 @@
   "description": "Support Tickets micro frontend",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
-    "dev": "webpack serve --mode development --host 0.0.0.0"
-  },
+  "start": "webpack serve --mode development --port 3009 --host 0.0.0.0",
+  "build": "webpack --mode production"
+},
   "dependencies": {
     "axios": "^1.5.0",
     "react": "^18.2.0",
